# data_logger

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  main.cpp  observer.hpp  safety_mgr.cpp
app/output/: out_stream_file.hpp  out_stream_terminal.cpp  out_stream_terminal.hpp
app/safety/: alert_handler.hpp  heart_rate_alert_handler.cpp  heart_rate_alert_handler.hpp  oxygen_sat_alert_handler.cpp  oxygen_sat_alert_handler.hpp  temp_alert_handler.cpp  temp_alert_handler.hpp
app/server/: server.cpp  server.hpp  session.cpp  session.hpp
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
include/: common.hpp  thread_pool.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
src/: main.cpp  safety_mgr.hpp
src/output/: out_stream.hpp  out_stream_file.cpp  trace_formatter.hpp
src/safety/: alert_handler_heart_rate.cpp  alert_handler_oxygen_sat.cpp  alert_handler_oxygen_sat.hpp  alert_handler_temp.cpp  alert_handler_temp.hpp
src/server/: server.hpp
